Add resend and test email functionality